add comment route
